# ibm-rag-agentic-ai-showcase

./: .env.example  .gitignore  LICENSE  README.md  app.py  client.py  pyproject.toml  server.py  test.py
.github/workflows/: ci.yml
docs/: lab-guide.tex
examples/: 01_structured_restaurant_extraction.py  02_multimodal_food_data_augmentation.py  03_safe_restaurant_database.py  04_construct_multimodal_vector_index.py  05_similarity_retrieval_with_metadata_filtering.py  06_multimodal_similarity_fusion.py  07_design_specialized_agents.py  08_multi_agent_recommendation_workflow.py  09_gradio_recommendation_chatbot.py
projects/: 01-structured-restaurant-extraction.md  02-multimodal-food-data-augmentation.md  03-safe-restaurant-database.md  04-multimodal-vector-index.md  05-similarity-retrieval.md  06-multimodal-fusion-ranking.md  07-specialized-recommendation-agents.md  08-multi-agent-recommendation-workflow.md  09-gradio-recommendation-chatbot.md  10-connoisseur-mcp-server.md  11-connoisseur-mcp-client.md  12-full-mcp-host-application.md
src/ibm_rag_agentic_showcase/: __init__.py  chatbot_interface.py  cli.py  mcp_client.py  mcp_host.py  mcp_server.py  multimodal_augmentation.py  multimodal_fusion.py  multimodal_vector_index.py  recommendation_workflow.py  restaurant_database.py  restaurant_extraction.py  similarity_retrieval.py  specialized_agents.py
tests/: conftest.py  test_chatbot_interface.py  test_mcp_client.py  test_mcp_host.py  test_mcp_server.py  test_multimodal_augmentation.py  test_multimodal_fusion.py  test_multimodal_vector_index.py  test_recommendation_workflow.py  test_restaurant_database.py  test_restaurant_extraction.py  test_similarity_retrieval.py  test_specialized_agents.py
