[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "ibm-rag-agentic-ai-showcase"
version = "0.1.0"
description = "Portfolio-ready IBM RAG and agentic AI course projects"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Djordje" }]
dependencies = [
    "ibm-watsonx-ai>=1.5.14,<2",
    "pydantic>=2.8,<3",
    "requests>=2.32,<3",
    "tenacity>=9,<10",
]

[project.optional-dependencies]
labs = [
    "matplotlib>=3.10.7,<4",
    "numpy>=2.3.4,<3",
    "pillow>=11,<13",
]
dev = [
    "pytest>=8,<10",
    "ruff>=0.12,<1",
]

[project.scripts]
restaurant-extract = "ibm_rag_agentic_showcase.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
