[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "ibm-rag-agentic-ai-showcase"
version = "0.1.0"
description = "Portfolio-ready IBM RAG and agentic AI course projects"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Djordje" }]
dependencies = [
    "ibm-watsonx-ai>=1.5.14,<2",
    "pydantic>=2.8,<3",
    "requests>=2.32,<3",
    "tenacity>=9,<10",
]

[project.optional-dependencies]
labs = [
    "matplotlib>=3.10.7,<4",
    "numpy>=2.3.4,<3",
    "pillow>=11,<13",
]
vector = [
    "chromadb>=1.5.9,<2",
    "langchain-chroma>=1.1,<2",
    "langchain-core>=1.4.8,<2",
    "numpy>=2.3.4,<3",
    "pillow>=11,<13",
    "sentence-transformers>=5.6,<6",
    "torch>=2.12,<3",
    "transformers>=5.13,<6",
]
agents = [
    "langchain>=1.3.11,<2",
]
dev = [
    "pytest>=8,<10",
    "ruff>=0.12,<1",
]

[project.scripts]
restaurant-extract = "ibm_rag_agentic_showcase.cli:main"
restaurant-db = "ibm_rag_agentic_showcase.restaurant_database:main"
build-multimodal-index = "ibm_rag_agentic_showcase.multimodal_vector_index:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
